// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`lib/manager/gitsubmodules/extract extractPackageFile() default to master branch 1`] = `
Array [
  Object {
    "currentDigest": "4b825dc642cb6eb9a060e54bf8d69288fbee4904",
    "currentValue": "4b825dc642cb6eb9a060e54bf8d69288fbee4904",
    "depName": "PowerShell-Docs",
    "registryUrls": Array [
      "git@github.com:PowerShell/PowerShell-Docs",
      "master",
    ],
  },
]
`;

exports[`lib/manager/gitsubmodules/extract extractPackageFile() extract branch 1`] = `
Array [
  Object {
    "currentDigest": "4b825dc642cb6eb9a060e54bf8d69288fbee4904",
    "currentValue": "4b825dc642cb6eb9a060e54bf8d69288fbee4904",
    "depName": "PowerShell-Docs",
    "registryUrls": Array [
      "git@github.com:PowerShell/PowerShell-Docs",
      "staging",
    ],
  },
]
`;

exports[`lib/manager/gitsubmodules/extract extractPackageFile() extract relative URL 1`] = `
Array [
  Object {
    "currentDigest": "4b825dc642cb6eb9a060e54bf8d69288fbee4904",
    "currentValue": "4b825dc642cb6eb9a060e54bf8d69288fbee4904",
    "depName": "PowerShell-Docs",
    "registryUrls": Array [
      "https://github.com/PowerShell/PowerShell-Docs",
      "staging",
    ],
  },
]
`;
